[package]
name = "rust-sv"
version = "0.5.0"
description = "A Rust library for working with the BSV blockchain."
repository = "https://github.com/murphsicles/rust-sv"
authors = ["Dr. Roy Murphy", "Brenton Gunning"]
keywords = ["bitcoin", "sv", "cash", "crypto"]
license = "MIT"
edition = "2024"

[dependencies]
base58 = "0.2.0"
byteorder = "1.5.0"
dns-lookup = "2.0.4"
hex = "0.4.3"
linked-hash-map = "0.5.6"
log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_warn"] }  # Updated to 0.4.22
murmur3 = "0.5.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = { version = "0.8.5", features = ["std"] }  # Downgraded to stable 0.8.5
ripemd = "0.1.3"
secp256k1 = { version = "0.29.1", features = ["rand", "global-context", "recovery", "lowmemory"] }
secp256k1-sys = "0.9.2"  # Downgraded to match secp256k1
snowflake = "1.3.0"
smallvec = { version = "1.13.2", features = ["const_generics"] }  # Fixed feature name
subtle = "2.6.1"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
sha2 = "0.10.8"
hmac = "0.12.1"
rustls = { version = "0.23.12", features = ["tls12"] }  # Updated to 0.23.12
thiserror = "1.0.63"
indexmap = "2.5.0"  # Added for block.rs

[dependencies.tokio]
version = "1.40.0"  # Updated to 1.40.0
features = ["full"]
optional = true

[features]
async = ["tokio"]

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = "0.5.1"
cargo-fuzz = "0.12.0"

[profile.release]
opt-level = 3
lto = true

[[bench]]
name = "benchmarks"
harness = false
